--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <charset = "UTF-8">
+  
     <title>Footprints BBS</title>
+  <meta charset="UTF-8">
     </head>
 <body>
   <table>
